# VSMP

./: CMakeLists.txt  a.out  dither.c  dither.h  main.c
